Resolução lista Pandas

--- a/TDP_I/Exercicios Pandas 1.ipynb
+++ b/TDP_I/Exercicios Pandas 1.ipynb
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "df_iris = pd.read_csv('https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data', sep =',', \\\n",
-    "                      names = ['sepal lenght','sepal width','petal length','petal width','classe'], header=0)"
+    "                      names = ['sepal length','sepal width','petal length','petal width','classe'], header=0)"
    ]
   },
   {
@@ -50,7 +50,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     sepal lenght  sepal width  petal length  petal width          classe\n",
+      "     sepal length  sepal width  petal length  petal width          classe\n",
       "0             4.9          3.0           1.4          0.2     Iris-setosa\n",
       "1             4.7          3.2           1.3          0.2     Iris-setosa\n",
       "2             4.6          3.1           1.5          0.2     Iris-setosa\n",
@@ -91,11 +91,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "332d571d-d25c-4afa-ad2a-8e7a37969c5e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     sepal length  sepal width  petal length  petal width          classe\n",
+      "0             4.9          3.0           1.4          0.2     Iris-setosa\n",
+      "1             4.7          3.2           1.3          0.2     Iris-setosa\n",
+      "2             4.6          3.1           1.5          0.2     Iris-setosa\n",
+      "3             5.0          3.6           1.4          0.2     Iris-setosa\n",
+      "4             5.4          3.9           1.7          0.4     Iris-setosa\n",
+      "..            ...          ...           ...          ...             ...\n",
+      "144           6.7          3.0           5.2          2.3  Iris-virginica\n",
+      "145           6.3          2.5           5.0          1.9  Iris-virginica\n",
+      "146           6.5          3.0           5.2          2.0  Iris-virginica\n",
+      "147           6.2          3.4           5.4          2.3  Iris-virginica\n",
+      "148           5.9          3.0           5.1          1.8  Iris-virginica\n",
+      "\n",
+      "[149 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_iris = pd.read_csv('https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data', sep =',', \\\n",
+    "                      names = ['sepal length','sepal width','petal length','petal width','classe'], header=0)\n",
+    "print(df_iris)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,12 +132,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "a6724c74-cd87-41d4-8d92-508721f288a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Selecionando os dados para o calculo do volume e os transoformando em array\n",
+    "petal_length = df_iris.iloc[:,2]\n",
+    "petal_length = np.array(petal_length.values)\n",
+    "sepal_length = df_iris.iloc[:,0]\n",
+    "sepal_length = np.array(sepal_length.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4cf8f098-627f-4962-bede-c39178802e12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculo do volume\n",
+    "volume = (petal_length*np.pi*sepal_length**2)/3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "42938bc7-5815-4003-ac65-05280f46a19d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.pi"
+    "# Adição da coluna volume e os seus respectivos valores\n",
+    "df_iris['volume'] = volume"
    ]
   },
   {
@@ -125,11 +176,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ff071f1e-76f0-4106-8e93-7f45948b6d2f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sepal length      5.848322\n",
+      "sepal width       3.051007\n",
+      "petal length      3.774497\n",
+      "petal width       1.205369\n",
+      "volume          153.478981\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "medias = df_iris[['sepal length','sepal width','petal length','petal width','volume']].mean(axis = 0)\n",
+    "print(medias)"
+   ]
   },
   {
    "attachments": {
@@ -171,11 +238,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "id": "6c1ed7d7-9409-48ea-ad66-db6e2c9d4875",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sepal length     5.004082\n",
+      "sepal width      3.416327\n",
+      "petal length     1.465306\n",
+      "petal width      0.244898\n",
+      "volume          38.775225\n",
+      "dtype: float64\n",
+      "[ 5.00408163  3.41632653  1.46530612  0.24489796 38.77522487]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_setosa = df_iris[df_iris['classe']=='Iris-setosa']\n",
+    "media_setosa = df_setosa[['sepal length','sepal width','petal length','petal width','volume']].mean(axis = 0)\n",
+    "media_setosa_array = np.array(media_setosa.values) #Array com valores das médias da setosa\n",
+    "print(media_setosa)\n",
+    "print(media_setosa_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e712c6dd-f058-42c9-acca-f5602e4f868e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sepal length      5.936000\n",
+      "sepal width       2.770000\n",
+      "petal length      4.260000\n",
+      "petal width       1.326000\n",
+      "volume          160.560036\n",
+      "dtype: float64\n",
+      "[  5.936        2.77         4.26         1.326      160.56003563]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_versicolor = df_iris[df_iris['classe']=='Iris-versicolor']\n",
+    "media_versicolor = df_versicolor[['sepal length','sepal width','petal length','petal width','volume']].mean(axis = 0)\n",
+    "media_versicolor_array = np.array(media_versicolor.values) #Array com valores das médias da setosa\n",
+    "print(media_versicolor)\n",
+    "print(media_versicolor_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "733bf423-8f58-4413-bbfe-5688e17bb798",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sepal length      6.588000\n",
+      "sepal width       2.974000\n",
+      "petal length      5.552000\n",
+      "petal width       2.026000\n",
+      "volume          258.807607\n",
+      "dtype: float64\n",
+      "[  6.588        2.974        5.552        2.026      258.80760723]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_virginica = df_iris[df_iris['classe']=='Iris-virginica']\n",
+    "media_virginica = df_virginica[['sepal length','sepal width','petal length','petal width','volume']].mean(axis = 0)\n",
+    "media_virginica_array = np.array(media_virginica.values) #Array com valores das médias da setosa\n",
+    "print(media_virginica)\n",
+    "print(media_virginica_array)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -187,11 +330,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "dfefd6df-986a-4009-9d5e-312e0e536c69",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_iris['media sepal lenght'] = '' \n",
+    "filtro = df_iris['classe']=='Iris-setosa'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "1d49f5c4-b08f-4da0-80f8-4550ef78fa05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal length</th>\n",
+       "      <th>sepal width</th>\n",
+       "      <th>petal length</th>\n",
+       "      <th>petal width</th>\n",
+       "      <th>classe</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>media sepal lenght</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "      <td>35.200498</td>\n",
+       "      <td>5.004082</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "      <td>30.072372</td>\n",
+       "      <td>5.004082</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "      <td>33.238050</td>\n",
+       "      <td>5.004082</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "      <td>36.651914</td>\n",
+       "      <td>5.004082</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.4</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "      <td>51.911677</td>\n",
+       "      <td>5.004082</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>144</th>\n",
+       "      <td>6.7</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "      <td>244.445230</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>6.3</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "      <td>207.816354</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>6.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "      <td>230.069302</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>6.2</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "      <td>217.373079</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>5.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>Iris-virginica</td>\n",
+       "      <td>185.910028</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>149 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     sepal length  sepal width  petal length  petal width          classe  \\\n",
+       "0             4.9          3.0           1.4          0.2     Iris-setosa   \n",
+       "1             4.7          3.2           1.3          0.2     Iris-setosa   \n",
+       "2             4.6          3.1           1.5          0.2     Iris-setosa   \n",
+       "3             5.0          3.6           1.4          0.2     Iris-setosa   \n",
+       "4             5.4          3.9           1.7          0.4     Iris-setosa   \n",
+       "..            ...          ...           ...          ...             ...   \n",
+       "144           6.7          3.0           5.2          2.3  Iris-virginica   \n",
+       "145           6.3          2.5           5.0          1.9  Iris-virginica   \n",
+       "146           6.5          3.0           5.2          2.0  Iris-virginica   \n",
+       "147           6.2          3.4           5.4          2.3  Iris-virginica   \n",
+       "148           5.9          3.0           5.1          1.8  Iris-virginica   \n",
+       "\n",
+       "         volume media sepal lenght  \n",
+       "0     35.200498           5.004082  \n",
+       "1     30.072372           5.004082  \n",
+       "2     33.238050           5.004082  \n",
+       "3     36.651914           5.004082  \n",
+       "4     51.911677           5.004082  \n",
+       "..          ...                ...  \n",
+       "144  244.445230                     \n",
+       "145  207.816354                     \n",
+       "146  230.069302                     \n",
+       "147  217.373079                     \n",
+       "148  185.910028                     \n",
+       "\n",
+       "[149 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_iris.iloc[filtro, 6] = media_setosa_array[0]\n",
+    "df_iris"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -203,11 +541,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "c516e9f9-be54-40d9-b84e-b66a5a5872a1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     sepal length  sepal width  petal length  petal width          classe  \\\n",
+      "0             4.9          3.0           1.4          0.2     Iris-setosa   \n",
+      "1             4.7          3.2           1.3          0.2     Iris-setosa   \n",
+      "2             4.6          3.1           1.5          0.2     Iris-setosa   \n",
+      "3             5.0          3.6           1.4          0.2     Iris-setosa   \n",
+      "4             5.4          3.9           1.7          0.4     Iris-setosa   \n",
+      "..            ...          ...           ...          ...             ...   \n",
+      "144           6.7          3.0           5.2          2.3  Iris-virginica   \n",
+      "145           6.3          2.5           5.0          1.9  Iris-virginica   \n",
+      "146           6.5          3.0           5.2          2.0  Iris-virginica   \n",
+      "147           6.2          3.4           5.4          2.3  Iris-virginica   \n",
+      "148           5.9          3.0           5.1          1.8  Iris-virginica   \n",
+      "\n",
+      "         volume media sepal lenght  \n",
+      "0     35.200498           5.004082  \n",
+      "1     30.072372           5.004082  \n",
+      "2     33.238050           5.004082  \n",
+      "3     36.651914           5.004082  \n",
+      "4     51.911677           5.004082  \n",
+      "..          ...                ...  \n",
+      "144  244.445230              6.588  \n",
+      "145  207.816354              6.588  \n",
+      "146  230.069302              6.588  \n",
+      "147  217.373079              6.588  \n",
+      "148  185.910028              6.588  \n",
+      "\n",
+      "[149 rows x 7 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "filtro_versicolor =  df_iris['classe']=='Iris-versicolor'\n",
+    "df_iris.iloc[filtro_versicolor, 6] = media_versicolor_array[0]\n",
+    "filtro_virginica =  df_iris['classe']=='Iris-virginica'\n",
+    "df_iris.iloc[filtro_virginica, 6] = media_virginica_array[0]\n",
+    "print(df_iris)"
+   ]
   }
  ],
  "metadata": {
