--- a/TDP_I/Exercicios_Numpy.ipynb
+++ b/TDP_I/Exercicios_Numpy.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "50fcc9eb-3727-47d7-95ce-1cae8eadfe91",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "658c616b-a0fc-433c-bbcd-6a4e584d2985",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,7 @@
        "array([], shape=(0, 4), dtype=float64)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,11 +249,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a462ef3a-8e57-41fb-9b64-d341e33687db",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True],\n",
+       "       [False, False, False, False,  True]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.isnan(filedata)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -265,11 +427,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "id": "4c45f6fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5.1, 3.5, 1.4, 0.2],\n",
+       "       [4.9, 3. , 1.4, 0.2],\n",
+       "       [4.7, 3.2, 1.3, 0.2],\n",
+       "       [4.6, 3.1, 1.5, 0.2],\n",
+       "       [5. , 3.6, 1.4, 0.2],\n",
+       "       [5.4, 3.9, 1.7, 0.4],\n",
+       "       [4.6, 3.4, 1.4, 0.3],\n",
+       "       [5. , 3.4, 1.5, 0.2],\n",
+       "       [4.4, 2.9, 1.4, 0.2],\n",
+       "       [4.9, 3.1, 1.5, 0.1]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtrado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "a4f40927-6d05-4203-b251-2e29641c477a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 5.1       ,  3.5       ,  1.4       ,  0.2       , 17.95033333],\n",
+       "       [ 4.9       ,  3.        ,  1.4       ,  0.2       , 13.188     ],\n",
+       "       [ 4.7       ,  3.2       ,  1.3       ,  0.2       , 13.93322667],\n",
+       "       [ 4.6       ,  3.1       ,  1.5       ,  0.2       , 15.0877    ],\n",
+       "       [ 5.        ,  3.6       ,  1.4       ,  0.2       , 18.99072   ],\n",
+       "       [ 5.4       ,  3.9       ,  1.7       ,  0.4       , 27.06366   ],\n",
+       "       [ 4.6       ,  3.4       ,  1.4       ,  0.3       , 16.93925333],\n",
+       "       [ 5.        ,  3.4       ,  1.5       ,  0.2       , 18.1492    ],\n",
+       "       [ 4.4       ,  2.9       ,  1.4       ,  0.2       , 12.32345333],\n",
+       "       [ 4.9       ,  3.1       ,  1.5       ,  0.1       , 15.0877    ]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "volume = (3.14*filtrado[:,2]*filtrado[:,1]**2)/3\n",
+    "new_filtrado = np.column_stack((filtrado, volume))\n",
+    "new_filtrado\n"
+   ]
   }
  ],
  "metadata": {
